
2021-02-25  Ron Norman <rjn@inglenet.com>

	* coblocal.h: Add 'cob_file_vbisam' 
	* common.c: Added COB_FILE_VBISAM as runtime option
	* common.h: Add to cob_file, isam_duplen, isam_idxsz, flag_vb_isam
	* fileio.c: If using V-ISAM and format is one of cisam, disam, vbisam
			then use the V-ISAM handler but set flag_vb_isam accordingly
			Also use the V-ISAM handler for any of the other missing ISAMs
	* fisam.c: Removed the code for first attempt at commit/rollback
			This has been superseded by the logic in fileio.c

2021-02-22  Ron Norman <rjn@inglenet.com>

	* fodbc.c: When testing for database type, peek at the error message

2021-02-19  Ron Norman <rjn@inglenet.com>

	* fileio.h: When checking INDEXED file format, if VB-ISAM
				and V-ISAM configured then use V-ISAM

2021-02-18  Ron Norman <rjn@inglenet.com>

	* V-ISAM is a reworked VB-ISAM that dynamically supports
		the old VB-ISAM file format as well as C-ISAM at runtime
	* common.h,common.c: Changes to replace VB-CISAM with V-ISAM
	* fileio.h,fileio.c: Changes to replace VB-CISAM with V-ISAM
	* Makefile.am,libcobvc.c: Changes to replace VB-CISAM with V-ISAM
	* fisam.c: Changes to replace VB-CISAM with V-ISAM
	         For OPEN OUTPUT and the file does exist, it checks on the file
			 format and retains that for the 'isbuild'

2021-02-17  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: If PIC 9 field in index had HIGH-VALUES set to all 9s
				cob_index_to_xfd is now passed 'cond' which 
				if COB_FI will set the index fields to lowest value and 
				if COB_LA will set the index fields to highest value
	* common.c: Add  'cob_get_env' to check for 'envname' then 'COB_envname'
	* fileio.c: Changed to use cob_get_env
				Changed to process IO_OPTIONS then IX/RL/SQ/LS_OPTIONS
				then IO_filename 
	* fodbc.c: Use indicator variable for adhoc SQL statements
				changed calls to cob_index_to_xfd
	* foci.c: changed calls to cob_index_to_xfd

2021-02-16  Ron Norman <rjn@inglenet.com>
